--- a/gen_input.ipynb
+++ b/gen_input.ipynb
@@ -18,39 +18,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fill_region(array_map, n,  topl, topr, botl, botr):\n",
-    "    # topl\n",
-    "    while topl[0] >= 1 and topl[1] >= 1:\n",
-    "        topl[0] -= 1\n",
-    "        topl[1] -= 1\n",
-    "        for i in range(topl[1], int(n/2-1) + 1):\n",
-    "            array_map[topl[0]][i] = array_map[int(n/2-1)][int(n/2-1)]\n",
-    "            array_map[i][topl[0]] = array_map[int(n/2-1)][int(n/2-1)]\n",
-    "    # topr\n",
-    "    while topr[0] >= 1 and topr[1] < n-1:\n",
-    "        topr[0] -= 1\n",
-    "        topr[1] += 1\n",
-    "        for i in reversed(range(int(n/2), topr[1] + 1)):\n",
-    "            array_map[topr[0]][i] = array_map[int(n/2) - 1][int(n/2)]\n",
-    "        for i in range(topr[0], int(n/2)):\n",
-    "            array_map[i][topr[1]] = array_map[int(n/2) - 1][int(n/2)]\n",
+    "def fill_region(array_map, n,  top_left, top_right, bot_left, bot_right):\n",
+    "    # top_left\n",
+    "    while top_left[0] >= 1 and top_left[1] >= 1:\n",
+    "        top_left[0] -= 1\n",
+    "        top_left[1] -= 1\n",
+    "        for i in range(top_left[1], int(n/2-1) + 1):\n",
+    "            array_map[top_left[0]][i] = array_map[int(n/2-1)][int(n/2-1)]\n",
+    "            array_map[i][top_left[0]] = array_map[int(n/2-1)][int(n/2-1)]\n",
+    "    # top_right\n",
+    "    while top_right[0] >= 1 and top_right[1] < n-1:\n",
+    "        top_right[0] -= 1\n",
+    "        top_right[1] += 1\n",
+    "        for i in reversed(range(int(n/2), top_right[1] + 1)):\n",
+    "            array_map[top_right[0]][i] = array_map[int(n/2) - 1][int(n/2)]\n",
+    "        for i in range(top_right[0], int(n/2)):\n",
+    "            array_map[i][top_right[1]] = array_map[int(n/2) - 1][int(n/2)]\n",
     "\n",
-    "    # botl\n",
-    "    while botl[0] < n-1 and botl[1] >= 1:\n",
-    "        botl[0] += 1\n",
-    "        botl[1] -= 1\n",
-    "        for i in reversed(range(int(n/2), botl[0] + 1)):\n",
-    "            array_map[i][botl[1]] = array_map[int(n/2)][int(n/2) - 1]\n",
-    "        for i in range(botl[1], int(n/2 - 1) + 1):\n",
-    "            array_map[botl[0]][i] = array_map[int(n/2)][int(n/2) - 1]\n",
+    "    # bot_left\n",
+    "    while bot_left[0] < n-1 and bot_left[1] >= 1:\n",
+    "        bot_left[0] += 1\n",
+    "        bot_left[1] -= 1\n",
+    "        for i in reversed(range(int(n/2), bot_left[0] + 1)):\n",
+    "            array_map[i][bot_left[1]] = array_map[int(n/2)][int(n/2) - 1]\n",
+    "        for i in range(bot_left[1], int(n/2 - 1) + 1):\n",
+    "            array_map[bot_left[0]][i] = array_map[int(n/2)][int(n/2) - 1]\n",
     "\n",
-    "    # botr\n",
-    "    while botr[0] < n-1 and botr[1] < n-1:\n",
-    "        botr[0] += 1\n",
-    "        botr[1] += 1\n",
-    "        for i in reversed(range(int(n/2), botr[0] + 1)):\n",
-    "            array_map[i][botr[1]] = array_map[int(n/2)][int(n/2)]\n",
-    "            array_map[botr[1]][i] = array_map[int(n/2)][int(n/2)]\n",
+    "    # bot_right\n",
+    "    while bot_right[0] < n-1 and bot_right[1] < n-1:\n",
+    "        bot_right[0] += 1\n",
+    "        bot_right[1] += 1\n",
+    "        for i in reversed(range(int(n/2), bot_right[0] + 1)):\n",
+    "            array_map[i][bot_right[1]] = array_map[int(n/2)][int(n/2)]\n",
+    "            array_map[bot_right[1]][i] = array_map[int(n/2)][int(n/2)]\n",
     "\n",
     "    return array_map\n",
     "\n",
@@ -77,9 +77,9 @@
     "    for i in range(1, 7):\n",
     "        if str(i) in array_map:\n",
     "            prison = list(zip(*np.where(array_map == str(i))))\n",
-    "            ranprison = random.randint(0, len(prison) - 1)\n",
-    "            array_map[prison[ranprison][0]][prison[ranprison][1]] += \"P\"\n",
-    "            ranPirate.append((prison[ranprison][0], prison[ranprison][1]))\n",
+    "            rand_prison = random.randint(0, len(prison) - 1)\n",
+    "            array_map[prison[rand_prison][0]][prison[rand_prison][1]] += \"P\"\n",
+    "            ranPirate.append((prison[rand_prison][0], prison[rand_prison][1]))\n",
     "\n",
     "    for i in range(n):\n",
     "        for j in range(n):\n",
@@ -111,17 +111,17 @@
     "\n",
     "    re_left = random.sample(range(1, regions), 6)\n",
     "\n",
-    "    topl = [int((n/2)-1), int((n/2)-1)]\n",
-    "    topr = [int((n/2)-1), int((n/2))]\n",
-    "    botl = [int((n/2)), int((n/2)-1)]\n",
-    "    botr = [int((n/2)), int((n/2))]\n",
+    "    top_left = [int((n/2)-1), int((n/2)-1)]\n",
+    "    top_right = [int((n/2)-1), int((n/2))]\n",
+    "    bot_left = [int((n/2)), int((n/2)-1)]\n",
+    "    bot_right = [int((n/2)), int((n/2))]\n",
     "\n",
-    "    array_map[topl[0]][topl[1]] = str(re_left[0])\n",
-    "    array_map[topr[0]][topr[1]] = str(re_left[1])\n",
-    "    array_map[botl[0]][botl[1]] = str(re_left[2])\n",
-    "    array_map[botr[0]][botr[1]] = str(re_left[3])\n",
+    "    array_map[top_left[0]][top_left[1]] = str(re_left[0])\n",
+    "    array_map[top_right[0]][top_right[1]] = str(re_left[1])\n",
+    "    array_map[bot_left[0]][bot_left[1]] = str(re_left[2])\n",
+    "    array_map[bot_right[0]][bot_right[1]] = str(re_left[3])\n",
     "\n",
-    "    array_map = fill_region(array_map, n, topl, topr, botl, botr)\n",
+    "    array_map = fill_region(array_map, n, top_left, top_right, bot_left, bot_right)\n",
     "    array_map = gen_r_left(array_map, n, re_left)\n",
     "\n",
     "    # random sea\n",
@@ -261,7 +261,7 @@
     "                        if (len(elm) < 2):\n",
     "                            f.write(\" \")\n",
     "                        f.write(\";\")\n",
-    "        map_aviable = True\n",
+    "        map_available = True\n",
     "        for i in range(n):\n",
     "            for j in range(n):\n",
     "                if (array_map[i][j].endswith(\"P\")):\n",
@@ -271,8 +271,8 @@
     "                    source.preStep.append((source.row, source.col))\n",
     "                    res = minDistance(array_map, source)\n",
     "                    if (res == -1):\n",
-    "                        map_aviable = False\n",
-    "        if (map_aviable):\n",
+    "                        map_available = False\n",
+    "        if (map_available):\n",
     "            break;\n",
     "        else:\n",
     "            print(\"Gen map failed: \")"
@@ -285,25 +285,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_map()\n",
-    "\n"
+    "save_map()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5cb8238",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1623d72a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
