--- a/visual.ipynb
+++ b/visual.ipynb
@@ -2,32 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "cc85d78f",
+   "execution_count": 129,
+   "id": "e58708fe",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from turtle import Screen, Turtle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "id": "d0ce1d32",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FONT_SIZE = 14\n",
-    "SIZE = 40\n",
-    "FONT = ('Arial', FONT_SIZE, 'normal')\n",
-    "FONT_BOLD = ('Arial', FONT_SIZE, 'bold')"
+    "from turtle import Screen, Turtle\n",
+    "from hint import Hint"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "ba0d75d4",
+   "id": "bcd5ce48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,15 +44,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "b689a383",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FONT_SIZE = 14\n",
+    "SIZE = 40\n",
+    "FONT = ('Arial', FONT_SIZE, 'normal')\n",
+    "FONT_BOLD = ('Arial', FONT_SIZE, 'bold')\n",
+    "\n",
+    "# set screen characteristics\n",
+    "screen = Screen()\n",
+    "screen.title('Visualization')\n",
+    "screen.bgcolor('lightblue')\n",
+    "screen.colormode(255)\n",
+    "\n",
+    "# set turtle characteristics\n",
+    "greg = Turtle()\n",
+    "greg.hideturtle()\n",
+    "\n",
+    "# set marker characteristics\n",
+    "marker = Turtle()\n",
+    "marker.penup()\n",
+    "marker.hideturtle()\n",
+    "\n",
+    "screen.tracer(False)  # because I have no patience"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 122,
-   "id": "2eaea29b",
+   "id": "e1faaf88",
    "metadata": {},
    "outputs": [],
    "source": [
     "def square(size, color):\n",
     "\n",
     "    ''' draw and fill one square '''\n",
-    "\n",
     "    greg.fillcolor(color)\n",
     "    greg.pendown()\n",
     "    greg.begin_fill()\n",
@@ -110,28 +127,7 @@
     "            else:    \n",
     "                marker.write(f\"{area}{dump}\", align='center', font=FONT)\n",
     "\n",
-    "        greg.goto(-size * height/2, size * width/2 - size * (i + 1))\n",
-    "\n",
-    "# set screen characteristics\n",
-    "screen = Screen()\n",
-    "screen.title('Visualization')\n",
-    "screen.bgcolor('lightblue')\n",
-    "screen.colormode(255)\n",
-    "\n",
-    "# set turtle characteristics\n",
-    "greg = Turtle()\n",
-    "greg.hideturtle()\n",
-    "\n",
-    "# set marker characteristics\n",
-    "marker = Turtle()\n",
-    "marker.penup()\n",
-    "marker.hideturtle()\n",
-    "\n",
-    "screen.tracer(False)  # because I have no patience\n",
-    "chessboard(SIZE)\n",
-    "screen.tracer(True)\n",
-    "\n",
-    "screen.mainloop()"
+    "        greg.goto(-size * height/2, size * width/2 - size * (i + 1))"
    ]
   },
   {
@@ -140,7 +136,12 @@
    "id": "aed6152d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "chessboard(SIZE)\n",
+    "screen.tracer(True)\n",
+    "\n",
+    "screen.mainloop()"
+   ]
   }
  ],
  "metadata": {
@@ -148,18 +149,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.6"
   },
   "toc": {
    "base_numbering": 1,
