add visual hint

--- a/visual.ipynb
+++ b/visual.ipynb
@@ -2,19 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 1,
    "id": "e58708fe",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from turtle import Screen, Turtle\n",
+    "import random\n",
     "from hint import Hint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 2,
+   "id": "94b84860",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FONT_SIZE = 14\n",
+    "SIZE = 40\n",
+    "FONT = ('Arial', FONT_SIZE, 'normal')\n",
+    "FONT_BOLD = ('Arial', FONT_SIZE, 'bold')\n",
+    "COLORS = [(111, 168, 220), (255, 242, 204), (217, 210, 233), (230, 184, 175), (234, 209, 220), (208, 224, 227), (217, 234, 211)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "bcd5ce48",
    "metadata": {},
    "outputs": [],
@@ -38,22 +53,93 @@
     "            map.append(f.readline().split(\";\"))\n",
     "        for i in range(int(height)):\n",
     "            for j in range(int(width)):\n",
-    "                map[i][j] = (int(map[i][j][0]), '' if map[i][j][1] == \"\\n\" or map[i][j][1] == \" \" else map[i][j][1])\n",
+    "                map[i][j] = (int(map[i][j][0]), '' if map[i][j][1] == \"\\n\" or map[i][j][1] == \" \" else map[i][j][1], False)\n",
     "    return (int(width), int(height)), reveals, free, regions, (Tx, Ty), map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b689a383",
+   "execution_count": 18,
+   "id": "e1faaf88",
    "metadata": {},
    "outputs": [],
    "source": [
-    "FONT_SIZE = 14\n",
-    "SIZE = 40\n",
-    "FONT = ('Arial', FONT_SIZE, 'normal')\n",
-    "FONT_BOLD = ('Arial', FONT_SIZE, 'bold')\n",
+    "def square(size, color, mark):\n",
     "\n",
+    "    ''' draw and fill one square '''\n",
+    "    greg.goto(greg.xcor() +1, greg.ycor())\n",
+    "    greg.fillcolor(color)\n",
+    "    if (mark):\n",
+    "        greg.pencolor('red')\n",
+    "        greg.pensize(3)\n",
+    "    else:\n",
+    "        greg.pencolor('black')\n",
+    "        greg.pensize(1)\n",
+    "    greg.pendown()\n",
+    "    greg.begin_fill()\n",
+    "    for _ in range(4):\n",
+    "        greg.forward(size)\n",
+    "        greg.left(90)\n",
+    "\n",
+    "    greg.end_fill()\n",
+    "\n",
+    "    greg.penup()\n",
+    "    greg.forward(size)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "22704107",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def chessboard(size):\n",
+    "\n",
+    "    ''' draw the whole chessboard '''\n",
+    "    (width, height), _, _, _,_, map = readInputFile(\"MAP_0.txt\")\n",
+    "    hint = Hint(map, width)\n",
+    "    hint.hint_1()\n",
+    "    \n",
+    "    map = hint.map\n",
+    "    \n",
+    "    greg.penup()\n",
+    "    greg.goto(-size * height/2, size * width/2)\n",
+    "    for i in range(height):\n",
+    "        for j in range(width):\n",
+    "            area, dump, mark = map[i][j]\n",
+    "            color = COLORS[area]\n",
+    "            square(size, color, mark)\n",
+    "            \n",
+    "            marker.goto(greg.xcor() - size/2, greg.ycor() + size/2 - FONT_SIZE/2)\n",
+    "#             marker.pencolor(\"black\")\n",
+    "            if (dump == \"P\" or dump == \"T\"):\n",
+    "                marker.write(f\"{area}{dump}\", align='center', font=FONT_BOLD)\n",
+    "            else:    \n",
+    "                marker.write(f\"{area}{dump}\", align='center', font=FONT)\n",
+    "        greg.goto(-size * height/2, size * width/2 - size * (i + 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "aed6152d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# set screen characteristics\n",
     "screen = Screen()\n",
     "screen.title('Visualization')\n",
@@ -69,79 +155,34 @@
     "marker.penup()\n",
     "marker.hideturtle()\n",
     "\n",
-    "screen.tracer(False)  # because I have no patience"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "id": "e1faaf88",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def square(size, color):\n",
+    "screen.tracer(False)  # because I have no patience\n",
     "\n",
-    "    ''' draw and fill one square '''\n",
-    "    greg.fillcolor(color)\n",
-    "    greg.pendown()\n",
-    "    greg.begin_fill()\n",
+    "chessboard(SIZE)\n",
+    "screen.tracer(False)\n",
     "\n",
-    "    for _ in range(4):\n",
-    "        greg.forward(size)\n",
-    "        greg.left(90)\n",
-    "\n",
-    "    greg.end_fill()\n",
-    "\n",
-    "    greg.penup()\n",
-    "    greg.forward(size)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "id": "22704107",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "COLORS = [(111, 168, 220), (255, 242, 204), (217, 210, 233), (230, 184, 175), (234, 209, 220), (208, 224, 227), (217, 234, 211)]\n",
+    "# screen.mainloop()\n",
     "\n",
     "\n",
-    "def chessboard(size):\n",
+    "ts = greg.getscreen()\n",
     "\n",
-    "    ''' draw the whole chessboard '''\n",
-    "    (width, height), _, _, _,_, map = readInputFile(\"MAP_0.txt\")\n",
-    "    greg.penup()\n",
-    "    greg.goto(-size * height/2, size * width/2)\n",
-    "    for i in range(height):\n",
-    "        for j in range(width):\n",
-    "            area, dump = map[i][j]\n",
-    "            color = COLORS[area]\n",
-    "            square(size, color)\n",
-    "\n",
-    "            marker.goto(greg.xcor() - size/2, greg.ycor() + size/2 - FONT_SIZE/2)\n",
-    "            marker.pencolor(\"black\")\n",
-    "            if (dump == \"P\" or dump == \"T\"):\n",
-    "                marker.write(f\"{area}{dump}\", align='center', font=FONT_BOLD)\n",
-    "            else:    \n",
-    "                marker.write(f\"{area}{dump}\", align='center', font=FONT)\n",
-    "\n",
-    "        greg.goto(-size * height/2, size * width/2 - size * (i + 1))"
+    "ts.getcanvas().postscript(file=\"hint.eps\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aed6152d",
+   "id": "8f865ab2",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "chessboard(SIZE)\n",
-    "screen.tracer(True)\n",
-    "\n",
-    "screen.mainloop()"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a754250",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -149,6 +190,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   },
   "toc": {
    "base_numbering": 1,
