save file log, random area, gen 32x32, 64x64

--- a/gen_input.ipynb
+++ b/gen_input.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "129f4d2f",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "d251eb4c",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "2920a47c",
    "metadata": {},
    "outputs": [],
@@ -245,18 +245,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "babb70df",
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_map():\n",
     "    while True:\n",
-    "        n = 16\n",
+    "        n = 64\n",
     "        array_map = np.chararray([n, n], 3, \"utf-8\")\n",
     "        array_map, treasure = gen_map(array_map, n)\n",
     "   \n",
-    "        with open(\"MAP_0.txt\", \"w\") as f:\n",
+    "        with open(\"MAP_2.txt\", \"w\") as f:\n",
     "            # - The first line contains 2 numbers to represent the size of the map (𝑾 and 𝑯).\n",
     "            f.write(\" \".join([str(n), str(n)]))\n",
     "            # - The second line is the turn number that the pirate reveals the prison (𝒓).\n",
@@ -279,6 +279,7 @@
     "                        if (len(elm) < 2):\n",
     "                            f.write(\" \")\n",
     "                        f.write(\";\")\n",
+    "            f.write(\"\\n\")\n",
     "        map_available = True\n",
     "        for i in range(n):\n",
     "            for j in range(n):\n",
@@ -291,14 +292,14 @@
     "                    if (res == -1):\n",
     "                        map_available = False\n",
     "        if (map_available):\n",
-    "            break;\n",
+    "            break\n",
     "        else:\n",
     "            print(\"Gen map failed: \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "677e7b0e",
    "metadata": {},
    "outputs": [],
@@ -323,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
   },
   "toc": {
    "base_numbering": 1,
