--- a/gen_input.ipynb
+++ b/gen_input.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "129f4d2f",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "d251eb4c",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "2920a47c",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
     "\n",
     "\n",
     "def gen_r_left(array_map, n, re_left):\n",
-    "    for i in range(4, 6):\n",
+    "    for i in range(len(re_left)):\n",
     "        index_row = random.randint(4, n-4)\n",
     "        index_col = random.randint(4, n-4)\n",
     "        size = random.randint(int(n/4), int(n/2))\n",
@@ -124,10 +124,9 @@
     "\n",
     "\n",
     "def gen_map(array_map, n):\n",
-    "    # 1->6\n",
-    "    regions = 7\n",
+    "    regions = 10 # regions = 10 means map has region 0->9\n",
     "\n",
-    "    re_left = random.sample(range(1, regions), 6)\n",
+    "    re_left = random.sample(range(1, regions), regions - 1)\n",
     "\n",
     "    top_left = [int((n/2)-1), int((n/2)-1)]\n",
     "    top_right = [int((n/2)-1), int((n/2))]\n",
@@ -245,18 +244,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "babb70df",
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_map():\n",
     "    while True:\n",
-    "        n = 64\n",
+    "        n = 128\n",
     "        array_map = np.chararray([n, n], 3, \"utf-8\")\n",
     "        array_map, treasure = gen_map(array_map, n)\n",
     "   \n",
-    "        with open(\"MAP_2.txt\", \"w\") as f:\n",
+    "        with open(\"MAP_128x128.txt\", \"w\") as f:\n",
     "            # - The first line contains 2 numbers to represent the size of the map (𝑾 and 𝑯).\n",
     "            f.write(\" \".join([str(n), str(n)]))\n",
     "            # - The second line is the turn number that the pirate reveals the prison (𝒓).\n",
@@ -299,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "677e7b0e",
    "metadata": {},
    "outputs": [],
@@ -324,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
+   "version": "3.10.7"
   },
   "toc": {
    "base_numbering": 1,
